--- a/style.css
+++ b/style.css
@@ -382,6 +382,7 @@ header {
 /* menu */
 
 .menu {
+  display: none;
   width: 2.3rem;
   height: 2rem;
 
@@ -390,7 +391,7 @@ header {
   position: relative;
   cursor: pointer;
 
-  display: flex;
+
   align-content: center;
   justify-content: center;
 }
