--- a/style.css
+++ b/style.css
@@ -491,27 +491,22 @@ header {
 
 .logo-spiderman {
   fill: transparent;
-  animation: logo-spiderman 12s ease infinite alternate;
-  transition: .7s ease;
+  animation: logo-spiderman 3.2s ease infinite alternate;
+  transition: 0.7s ease;
 }
 
 @keyframes logo-spiderman {
   0% {
-    stroke-width: 0;
-    stroke-dasharray: 1 100;
-    fill: transparent;
-  }
 
-  25% {
-    stroke-width: 0.3;
-    stroke-dasharray: 100 0;
     fill: transparent;
+    opacity: 0;
   }
 
   60%,
   100% {
-    stroke-width: 0;
+
     fill: #E5E9EF;
+    opacity: 1;
   }
 }
 
